typescript/checker/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature9.ts.stderr
error: Unexpected token Some(RBracket)
 --> $DIR/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature9.ts:2:5
  |
2 |    []: number
  |     ^

